Updated on Dev About.cshtml

--- a/About.cshtml
+++ b/About.cshtml
@@ -3,7 +3,8 @@
 }
 
 <section id="main">
-    <h1>A little bit about Fourth Coffee</h1>
+    <h1>A Fourth Coffee</h1>
+<div class="tenor-gif-embed" data-postid="19610294" data-share-method="host" data-aspect-ratio="1.29555" data-width="100%"><a href="https://tenor.com/view/ok-ok-ok-sare-sarey-alaage-gif-19610294">Ok Ok Ok GIF</a>from <a href="https://tenor.com/search/ok+ok-gifs">Ok Ok GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     <p>
         Fourth Coffee was founded in 2010 and delivers coffee and fresh baked goods right to your door. 
         In another life, Bill Baker was a developer by day and pastry chef by night.  
